text spacing fix

--- a/src/pages/About/styles.scss
+++ b/src/pages/About/styles.scss
@@ -138,6 +138,7 @@ p {
     width: auto;
     height: auto;
     gap: 3vw;
+    text-align: justify;
   }
 }
 
